--- a/demo1/todos.html
+++ b/demo1/todos.html
@@ -15,7 +15,20 @@
         <button id="add-todo-btn" disabled>Add</button>
     </div>
 
-    <ul id="todo-list"></ul>
+    <ul id="todo-list">
+       <li>
+        <span>Walk the dog</span>
+        <button>Done</button>
+    </li>
+    <li>
+        <span>Water the Plant</span>
+        <button>Done</button>
+    </li>
+    <li>
+        <span>Sand the chair</span>
+        <button>Done</button>
+    </li> 
+    </ul>
     
 </body>
 </html>
